Fix spacing on heatmap xlabels

--- a/static/CSS/style_pages.css
+++ b/static/CSS/style_pages.css
@@ -584,7 +584,7 @@ tr {
 }
 .hm {
   /* margin-top: 3%; */
-  margin-bottom: 5%;
+  /* margin-bottom: 5%; */
 }
 .styleSquare {
   cursor: pointer;
@@ -687,7 +687,7 @@ ul {
 }
 .tree {
   margin-top: 3%;
-  margin-bottom: 5%;
+  /* margin-bottom: 5%; */
 }
 .pie {
   padding-bottom: 10%;
